--- a/vignettes/vignette_construct_corpus.Rmd
+++ b/vignettes/vignette_construct_corpus.Rmd
@@ -26,7 +26,7 @@ knitr::opts_chunk$set(
 library(codexplor)
 
 # 1) Construct a corpus without a Citations network
-  corp <- construct_corpus("./R/", languages = "R")
+  corp <- construct_corpus( repos =  "clement-LVD/codexplor", languages = "R")
   
   str(corp, max.level = 1) 
   
@@ -40,23 +40,37 @@ library(codexplor)
     , languages = "Python", .verbose = T) #take a while
 
 ### Returned list of data.frame
-`construct_corpus` return a `corpus.list` object, a standard `list` of `df` with 2 `corpus.lines` and 1 `corpus.nodelist` `dataframe`. Later you add others `dataframe` such as a `citations.network` of internal dependancies.
 
-Some text-mining metrics are already computed within each line and within document-level (e.g., number of characters, words count). Depending on the considered `dataframe` 
+**corpus.list of dataframes.** `construct_corpus` return a `corpus.list` object, a standard `list` of 3 dataframes, i.e. 2 `corpus.lines` and 1 `corpus.nodelist` dataframes. 
+
+Complementary or specific analyzes will add others dataframes to the list, e.g., a network of internal dependancies (classes `citations.network` & `dataframe`).
+
+**Text-mining metrics.** 
+Each lines and each documents are associated with text-mining metrics (e.g., number of characters, words count). Within the returned `list` of dataframes, these metrics are relative to : 
+
+- a specific line for the `corpus.lines` dataframes
+- or to the entire document for the `corpus.nodelist` `dataframe` .
+
+**1st matches operated.** `construct_corpus` try to perform a 1st identification within the content, accordingly to some default patterns : *this behavior is crafted specifically for analyze a programming project*. 
+
+The defaults patterns try to extract the functions names as soon as they are defined within a file of the corpus. Further post-processing of the text allow us, for example, to identify if it's an exposed or inner function (*aka* nested function, defined within a function definition).
+
+These first matches and first metrics are intended to be the first standardized step before applying deeper analyses, e.g., see the [vignette of `get_doc_network_from_project`](https://clement-lvd.github.io/codexplor/articles/vignette_get_doc_network_from_project.html).
 
 ### Default patterns associated with languages
 For a given language, a default standardized patterns is used for :
 
 ```{r table-operations-construct-corpus, echo=FALSE}
 
-steps <- data.frame(Step = c("Read the files of the local folder(s) and/or github public repo(s) accordingly to their extension"  
-, "Separate commented lines from code lines"                    
- , "Extract a 1st matched-text within the codes lines, accordingly to a pattern"
-
+steps <- data.frame(Step = c("Read the files of the local folder(s) and/or github public repo(s)"  
+, "Separate commented lines from *codes lines*"                    
+ , "Extract a 1st matched-text within the *codes lines*"
+, "Refine and post-process the *codes lines* accordingly to the canonical way of writing a program"
 )
  , Examples = c('e.g., "R" language is associated with "`.R`" files and a filtering pattern (e.g., files with "`test-`", "`vignettes`", "`Rcheck`" in their full names are excluded)'   
 , 'e.g., R & Python files generally have each commented lines that begin with "`#`", others languages should have commented blocks separeted on several lines (e.g., `/* [comments] */`'
-  , 'e.g.,  default pattern extract the names of the functions defined within a file, e.g., for the R programming language : the name is before a "`<- function(`" instruction'
+  , 'e.g.,  default patterns are crafted for extract the names of the functions defined within a file, e.g., for the R programming language : the name is before a "`<- function(`" instruction'
+, "e.g., delimitors of a block of code within a .R file are '{' and `}`"
 )
 
 )
@@ -68,22 +82,6 @@ knitr::kable(steps,row.names = T )
 ```
 
 By default `construct_corpus` try to analyze .R files. One or several `languages` could be passed to `construct_corpus` (e.g., "R", "Python", "Javascript").
-
-### Function call that are non-supported
-Some way of writing a program are not fully supported, such as :
-
-**Python instantiated methods.** The instantiated Python methods are not supported for now, i.e. `obj.method()`.
-
-```{r eval = F }
-#  Python code herafter : unmatched function called
-class A:
-    def method(self):
-        return "My custom method"
-
-obj = A()
-obj.method()  # codexplor don't see that internal dependancy since the method() had a prefix ("obj.")
-#return : 'My custom method'
-```
 
 ### About duplicated lines associated with 1st matches
 `construct_corpus` perform a 1st text-extraction, accordingly to a pattern. During this 1st matches extraction, lines are duplicated *when several matches are found on the same line*. 
