--- a/vignettes/vignette_construct_corpus.Rmd
+++ b/vignettes/vignette_construct_corpus.Rmd
@@ -19,7 +19,7 @@ library(codexplor)
 **`codexplor::construct_corpus`** read programming files and turn a programming project into a text-mining corpus, given :
 
 - folder(s) path(s) and/or github repo(s) to analyze ;
-- and programming language(s) (default is `'R'`).
+- and programming language(s) - default is `'R'`.
 
 **Supported languages.** By default `construct_corpus` try to read and analyze .R files, but one or several `languages` could be indicated. Recognized languages are `r paste0(names(get_def_regex_by_language()) , collapse = ", ")`. 
 
@@ -56,36 +56,35 @@ Each lines and each documents are associated with text-mining metrics (e.g., num
 - a specific line for the `corpus.lines` dataframes
 - or to the entire document for the `corpus.nodelist` `dataframe` .
 
-The `codes` `dataframe` (one of the `corpus.lines` dataframes) have a '`matches`' column. These 1st matches are explained hereafter.
+The `codes` `dataframe` (one of the `corpus.lines` dataframes) have several additionnal columns, such as :
+
+- a `commented` column with comments at the end of a codeline
+- and a '`matches`' column that contain functions names (see hereafter). 
 
 ## 1st matches operated
 Given language(s), `construct_corpus` try to perform an initial identification within the content. By default, these 1st matches are supposed to be the function names, as soon as a function is defined within a file. For example, if a `pol  <- function` is defined within a file, the 1st `matches` corresponding entry will be `'pol'`.
 
-In order to extract the functions names as a 1st matches, `construct_corpus` rely on some default patterns, associated with the supported languages (see the next section). 
-
-
-**About duplicated lines associated with 1st matches.**
-`construct_corpus` perform a 1st text-extraction, accordingly to a pattern. During this 1st matches extraction, lines are duplicated *when several matches are found on the same line*. This case where several matches are performed on the same lines - and so lines are duplicated - trigger a `warning`. 
-
-> For example, by default, the names of functions defined in the files of the project are extracted during the 1st match operated by `construct_corpus`. If a file have several function defined *within the same line*, such a line will be duplicated in the returned `df`, with several 'matches' entries along these lines and an identical line_number. 
+In order to extract the functions names as a 1st matches, `construct_corpus` rely on some default patterns, associated with the supported languages. 
 
 ## Default patterns associated with languages
-For each of the required language(s), a default standardized patterns is used for :
+For each of the required language(s), default standardized patterns are used for craft a corpus from folder path(s) or github repo name(s) :
 
 ```{r table-operations-construct-corpus, echo=FALSE}
 
-steps <- data.frame(Step = c("Filter files path/url accordingly to some patterns and read only the selected programming files with the correct extension(s)"  
-, "Separate commented lines from *codes lines*"                    
- , "Perform 1st matches within the *codes lines* (default try to extract the functions names)"
-, "Refine and post-process the *codes lines*"
+steps <- data.frame(Step = c("Filter files path/url and read only files with correct extension(s)"  
+, "**Separate commented lines** from *codes lines*"  
+, "**Identify the unested - exposed - content** within the *codes lines*, in order to exclude the inner functions (*aka* nested functions) from the matches of the next step"
+ , "**Extract functions names** within the *codes lines* (1st matches)"
 )
- , Examples = c('e.g., "R" language is associated with "`.R`" files and a filtering pattern (e.g., files with "`test-`", "`vignettes`", "`Rcheck`" in their full names are excluded)'   
-, 'e.g., R & Python files generally have each commented lines that begin with "`#`", others languages should have commented blocks separeted on several lines (e.g., `/* [comments] */`'
-  , 'e.g.,  default patterns are crafted for extract the names of the functions defined within a file, e.g., for the R programming language : the name is before a "`<- function(`" instruction'
-, "e.g., specifical delimitors of a block of code such as '{' and '}' within a .R file are used to determine if a given 1st match - function definition - is included within another function definition as an inner function (*aka* nested function)"
+ , Examples = c('e.g., "R" language is associated with "`.R`" files and a default filtering pattern (e.g., files with "`test-`", "`vignettes`", "`Rcheck`" in their full names are excluded)'   
+, 'e.g., R & Python files have commented lines that begin with "`#`", others languages commented lines with "`/*`" and sometimes have commented blocks on several lines'
+, "e.g., extract unexposed content accordingly to the block of code delimitor such as '{' and '}' for the R language"
+  , 'e.g.,  default patterns of the 1st matches are crafted for extract the names of the functions defined within a file, e.g., for the R programming language : the name is before a "`<- function(`" instruction'
 )
 
 )
+
+rownames(steps) <- c("1. Read", "2. Preprocess" ,"3. Identify", "3. Qualify")
 
 colnames(steps) <- c("Steps", "Examples of pattern associated with language(s)")
 
@@ -93,7 +92,12 @@ knitr::kable(steps,row.names = T )
 
 ```
 
-> These default patterns are crafted specifically to analyze a programming project in a standardized way, given a programming language.
+> These default patterns are crafted specifically to analyze a programming project in a standardized way, given the programming language(s) of the project.
+
+## About duplicated lines associated with 1st matches
+`construct_corpus` perform a 1st text-extraction, accordingly to a pattern. During this 1st matches extraction, lines are duplicated *when several matches are found on the same line*. This case where several matches are performed on the same lines - and so lines are duplicated - trigger a `warning`. 
+
+> For example, by default, the names of functions defined in the files of the project are extracted during the 1st match operated by `construct_corpus`. If a file have several function defined *within the same line*, such a line will be duplicated in the returned `df`, with several 'matches' entries along these lines and an identical line_number. 
 
 ### Helper functions that rely on `construct_corpus`
-`codexplor::get_doc_network_from_project` is an helper 'high-level' function that perform an analysis of the internal dependancies by performing a 2nd matches directly from the 1st matches of `construct_corpus`, e.g., see the [vignette of `get_doc_network_from_project`](https://clement-lvd.github.io/codexplor/articles/vignette_analyse_citations_network_from_project.html).
+`codexplor::get_doc_network_from_project` is an helper 'high-level' function that perform an analysis of the internal dependancies by performing a 2nd matches from the 1st matches of `construct_corpus`, e.g., see the [vignette about analyzing a network of internal dependancies with `get_doc_network_from_project`](https://clement-lvd.github.io/codexplor/articles/vignette_analyse_citations_network_from_project.html).
