--- a/vignettes/vignette_citations.network_df_of_internal.dependencies.Rmd
+++ b/vignettes/vignette_citations.network_df_of_internal.dependencies.Rmd
@@ -1,8 +1,8 @@
 ---
-title: "Citations Network computed by codexplor"
+title: "Citations Network of Internal Dependencies computed by codexplor"
 output: rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{Citations Network computed by codexplor}
+  %\VignetteIndexEntry{Citations Network of Internal Dependencies computed by codexplor}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
@@ -14,16 +14,22 @@ knitr::opts_chunk$set(
 )
 ```
 
-This Vignette give a basic understanding of the `citations.network` `dataframe` : a Citations Network of functions within programming project(s) computed by some of the `codexplor` reporting protocols, i.e. `codexplor::get_doc_network_from_project()` and other functions that rely on `compute_doc_network_from_corpus`. 
+This Vignette give a basic understanding of a `dataframe` of the `corpus.list` computed by some of the `codexplor` functions : a Citations Network of functions within programming project(s). This `data.frame` have additional classes `citations.network` and `internal.dependencies`.
 
-This particular `citations.network` `dataframe` is one of the cornerstones of `codexplor`, in order to made 'clusters' of files before further processing, e.g., before to aggregate readability statistics to this 'cluster' level.
+## About the `citations.network` `dataframe` 
+The `citations.network`  class of `dataframe` is one of the cornerstones of `codexplor`, in order to made clusters of files before further processing, e.g., before to aggregate readability statistics for finding 'difficult-to-read' clusters. It's computed by some of the `codexplor` reporting protocols that will add objects into the main `corpus.list`, e.g., `codexplor::get_doc_network_from_project()` and other functions that rely on `compute_doc_network_from_corpus`. 
+
+> 🎁 The `citations.network` `dataframe` is an edgelist that symbolize the programming project as a network of documents that cite each others. 
+
+> A type of interesting citations.network is the network of internal dependencies within the files of a programming project : links are beginning from the programming file that is calling a function => to the programming file where this function is defined.
+
 
 ### Network properties
 The returned `citations.network` `dataframe` is the edgelist^[Edgelist is the one of the standard representation of a graph (https://igraph.org/r/doc/as_edgelist.html).] of a document-to-document citations network. These networks have basic properties, not covered here (e.g., a citations network is a directed network).
 
 Regarding the `citations.network` `dataframe` of the `corpus.list` `list` of dataframes :
 
-- Nodes are the programming files, default is a network of .R files. 
+- Nodes are the programming files. 
 - Edges go from the file that calls a function to the file where the function is defined.
 
 > `codexplor` default pattern are aimed to extract functions names from the files of a *programming* project (see next section). 
@@ -38,11 +44,24 @@ Thus, in a typical programming project :
 ### Cascading matching operated by `compute_doc_network_from_corpus`
 Given a `corpus.list` created with `construct_corpus`, `codexplor::compute_doc_network_from_corpus()` will try to perform a 'cascading matching' :
 
-⏩ Transform the *1st matches* added by `codexplor::construct_corpus` into a pattern. The default are supposed to extract *R functions names as a 1st matches*, e.g., we have defined 'Pier', 'Pol' and 'Jak' - functions - names in 3 separates files. 
+```{r table-cascading-matches, echo=FALSE}
 
-⏩ And search for these patterns in the initial content , in order to constitute a Citations Network with these 2nd matches, e.g., a programming file is citing 'Pier', 'Pol' and 'Jak' and thus this file is linked to the files where we previously found the 1st matches.
+match_2 <- data.frame(Step = c("⏩ `construct_corpus` is supposed to extract *functions names as a 1st matches*, from the files where these functions are defined)"
+                    , "⏩ Transform the *1st matches* into a pattern and search for these patterns in the initial content, in order to compute a Citations Network with these 2nd matches")
+             
+             , Examples = c("e.g., have found 'Pier', 'pol' and 'jak' function names in 3 separate files" 
+                          
+,"e.g., a programming file is citing 'Pier', 'pol' and 'jak' and thus this file is linked to the files where we previously found these matches"))
 
-🎁 Return the edgelist that symbolize this network of *documents*. Default is a network of internal dependencies within the files of a programming project : links are beginning from the programming file that is calling a function => to the programming file where this function is defined.
+
+rownames(match_2) <- c("1st matches" , "2nd matches" )
+
+knitr::kable(match_2, row.names = T)
+
+
+```
+
+
 
 ### Function call that are non-supported during 2nd matches
 Some way of writing a program are not fully supported, such as :
