--- a/README.Rmd
+++ b/README.Rmd
@@ -186,7 +186,7 @@ fn_segmentation <- data.frame(
                 )
 , 
 "Low-level" = c( "Construct a corpus : [vignette of `construct_corpus()`](https://clement-lvd.github.io/codexplor/articles/vignette_construct_corpus.html)", 
-              "Middle-level" = "Understand the citations.network of internal dependancies : [vignette of `citations.network` `dataframe`](https://clement-lvd.github.io/codexplor/articles/vignette_citations.network_df_of_internal.dependancies.html)" 
+              "Middle-level" = "Understand the citations.network of internal dependancies : [vignette of `citations.network` `dataframe`](https://clement-lvd.github.io/codexplor/articles/vignette_citations.network_df_of_internal.dependencies.html)" 
                  
   
                               )
