--- a/vignettes/vignette_analyse_citations_network_from_project.Rmd
+++ b/vignettes/vignette_analyse_citations_network_from_project.Rmd
@@ -14,13 +14,16 @@ knitr::opts_chunk$set(
 )
 ```
 
-This vignette give a basic understanding of the `corpus.list` `list` of dataframes returned by `codexplor::get_doc_network_from_project` : a standard `corpus.list` + an additional `citations.network`, the edgelist of a network of the functions defined in *programming project(s)*.
+This vignette give a basic understanding of the `list` of the `citations.network` dataframe returned by `codexplor::get_doc_network_from_project`.
 
-> `codexplor::get_doc_network_from_project` add a `citations.network` `data.frame` to the `corpus.list` returned by `codexplor::construct_corpus`.
+##Overview
 
-The 1st matches of `codexplor::construct_corpus` reveal some files that *defines* a function, and the 2nd matches of `compute_doc_network_from_corpus` show the files that used these functions. Thus, links are beginning from the programming file that is calling a function => to the programming file where this function is defined. 
+`codexplor::get_doc_network_from_project` :
 
-See [vignette of `construct_corpus`](https://clement-lvd.github.io/codexplor/articles/vignette_construct_corpus.html) for the 1st matches performed by `construct_corpus`; and the [vignette of the `citations.network` `dataframe`](https://clement-lvd.github.io/codexplor/articles/vignette_citations.network_df_of_internal.dependencies.html) for the 2nd matches.
+1. compute a `corpus.list` as it is returned by `codexplor::construct_corpus` (see [vignette of `construct_corpus`](https://clement-lvd.github.io/codexplor/articles/vignette_construct_corpus.html))
+2. and add a new `data.frame` with additional classes `citations.network` and `internal.dependencies`, as the edgelist of a network of the functions defined within the files of the corpus (see the [vignette of the `citations.network` `dataframe`](https://clement-lvd.github.io/codexplor/articles/vignette_citations.network_df_of_internal.dependencies.html)). 
+
+In such a `citations.network` of `internal.dependencies`, links start from the programming file that calls a function and point to the programming file where the function is defined.
 
 ### Example
 Given folders path(s) and/or github repo(s), compute a *citations network* of the functions with ![.](https://img.shields.io/badge/{Method}-bold?style=flat&logoColor=black&logoSize=2&label=get_doc_network_from_project()&labelColor=yellow&color=black)
@@ -36,7 +39,7 @@ get_networkd3_from_igraph(net$citations.network)
 ```
 
 
-By default, `get_networkd3_from_igraph` will colorize the nodes accordingly to their indegrees. This will reveal the local dependencies of the programming project (i.e. functions used by others files of the project). 
+By default, `get_networkd3_from_igraph` will colorize the nodes accordingly to their indegrees. This reveal the local dependencies of the programming project (i.e. functions used by others files of the project). 
 
 ![.](../man/figures/example_net3d_dataviz.png){width=90%}
 
